--- a/exercise2.html
+++ b/exercise2.html
@@ -23,14 +23,17 @@
         <label for="name">Enter your name:</label>
         <input type="text" id="name" name="name">
 
+        <br><br>
+
         <div>
-            <input type="radio" id="sectionL01" name="section" value="section1">
-            <label for="sectionL01">Section 1</label>
-
-            <br>
-
-            <input type="radio" id="sectionL02" name="section" value="section2">
-            <label for="sectionL02">Section 2</label>
+            <fieldset>
+                <legend>Select your section:</legend>
+                <input type="radio" id="sectionL01" name="section" value="section1">
+                <label for="sectionL01">Section 1</label>
+                <br>
+                <input type="radio" id="sectionL02" name="section" value="section2">
+                <label for="sectionL02">Section 2</label>
+            </fieldset>
         </div>
     </form>
 </body>
