Add element to link exercise 3 to exercise 2

--- a/exercise2.html
+++ b/exercise2.html
@@ -7,7 +7,8 @@
     <h1>My Personal Page</h1>
     <img src="profile.png" alt="Profile Picture" width="100px" height="100px">
     <p>
-        <a href="https://www.ucalgary.ca/">University of Calgary</a>
+        <a href="https://www.ucalgary.ca/">University of Calgary</a><br>
+        <a href="exercise3.html">History</a>
     </p>
 
     <h2>My Hobbies</h2>
