--- a/exercise3.html
+++ b/exercise3.html
@@ -2,13 +2,13 @@
 <html lang = "en">
 <head>
     <!--debugging style--> 
-    <style> 
+    <!--<style> 
         table, th, td { 
             border: 1px solid rgb(255, 255, 255); 
             border-collapse: collapse; 
         } 
-    </style> 
-    <!--debugging style -->
+    </style> -->
+    
     <title>Our History</title>
 
 </head>
@@ -50,7 +50,7 @@
             <td>
                 <h2>Calgary's urban evolution</h2>
                 <p>A university and a city growing together side by side.</p>
-                <a href="https://ucalgary.ca/about/ourhistory/calgarys-urban-evolution">Read more</a>
+                <a href="https://ucalgary.ca/about-ucalgary/our-history/calgarys-urban-evolution">Read more</a>
             </td>
         </tr>
 
@@ -58,23 +58,23 @@
             <td>
                 <h2>Changing face of campus</h2>
                 <p>Creating an intellectual hub to empower the problem-solvers of the future, today.</p>
-                <a href="https://ucalgary.ca/about/ourhistory/changing-face-campus ">Read more</a>
+                <a href="https://ucalgary.ca/about-ucalgary/our-history/changing-face-campus">Read more</a>
             </td>
 
             <td>
-               <img src="image2.jpg" alt="Changing face of campus" width="570px" height="400px"> 
+               <img src="image2.jpg" alt="University of Calgary pictured with students walking through the snowy weather" width="570px" height="400px"> 
             </td>
         </tr>
 
         <tr>
             <td>
-                <img src="image3.jpg" alt="Changing face of campus" width="570px" height="400px">
+                <img src="image3.jpg" alt="Image of the arch and statues on campus" width="570px" height="400px">
             </td>
 
             <td>
                  <h2>Culture and society</h2>
                 <p>Fueling the cultural and social transformation of a city and region.</p>
-                <a href="https://ucalgary.ca/about/ourhistory/culture-and-society">Read more</a>
+                <a href="https://ucalgary.ca/about-ucalgary/our-history/culture-and-society">Read more</a>
             </td>
         </tr>
     </table>
